--- a/index.html
+++ b/index.html
@@ -1,145 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asiri Home Stay</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f2f2f2; /* Light grey background */
-    }
-
-    .header {
-      background-color: #333; /* Dark grey header */
-      color: #fff;
-      text-align: center;
-      padding: 10px 0;
-    }
-
-    .header h1 {
-      margin: 0;
-      font-size: 36px;
-    }
-
-    .navbar {
-      overflow: hidden;
-      background-color: #333;
-    }
-
-    .navbar a {
-      float: left;
-      display: block;
-      color: #fff;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-    }
-
-    .navbar a:hover {
-      background-color: #ddd;
-      color: #333;
-    }
-
-    .content {
-      padding: 20px;
-    }
-
-    .section {
-      margin-bottom: 20px;
-    }
-
-    .section h2 {
-      border-bottom: 2px solid #333;
-      padding-bottom: 5px;
-    }
-
-    .room {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .room img {
-      margin-right: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    .contact {
-      text-align: center;
-      padding: 20px;
-      background-color: #333;
-      color: #fff;
-    }
-
-    .footer {
-      text-align: center;
-      padding: 10px;
-      background-color: #333;
-      color: #fff;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Download Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1, h2 {
+            text-align: center;
+            color: #333;
+        }
+        .movie-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .movie-list li {
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            display: flex;
+            align-items: center;
+        }
+        .movie-list li img {
+            max-width: 150px;
+            margin-right: 20px;
+            border-radius: 4px;
+        }
+        .movie-details {
+            flex: 1;
+        }
+        .movie-title {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        .movie-rating {
+            font-size: 14px;
+            color: #888;
+            margin-bottom: 10px;
+        }
+        .movie-description {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        .movie-link {
+            margin-top: 10px;
+        }
+        .movie-link a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .movie-link a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-
-  <div class="header">
-    <h1>Asiri Home Stay</h1>
-    <p>Your perfect getaway</p>
-  </div>
-
-  <div class="navbar">
-    <a href="#">Home</a>
-    <a href="#about">About</a>
-    <a href="#rooms">Rooms</a>
-    <a href="#gallery">Gallery</a>
-    <a href="+94766520048">Contact</a>
-  </div>
-
-  <div id="about" class="content">
-    <div class="section">
-      <h2>About Us</h2>
-      <p>Welcome to Asiri Home Stay, where comfort meets tranquility. Located in a serene environment, we offer the perfect retreat for your vacation.</p>
+    <div class="container">
+        <h1>Movie Download Website</h1>
+        <p>Welcome to our movie download website. Browse the movies below:</p>
+        
+        <ul class="movie-list">
+            <li>
+                <img src="placeholder_image.jpg" alt="Movie Image">
+                <div class="movie-details">
+                    <div class="movie-title">Movie Title</div>
+                    <div class="movie-rating">IMDb Rating: 7.5</div>
+                    <div class="movie-description">Movie Description Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="movie-link"><a href="https://t.me/your_telegram_bot_username_or_link?start=movie_id_1">Download Movie</a></div>
+                </div>
+            </li>
+            <!-- Add more movies as needed -->
+        </ul>
     </div>
-
-    <div id="rooms" class="section">
-      <h2>Rooms & Amenities</h2>
-      <div class="room">
-        <img src="room1.jpg" alt="Room 1">
-        <img src="room2.jpg" alt="Room 2">
-        <img src="room3.jpg" alt="Room 3">
-      </div>
-      <p>Explore our cozy rooms and modern amenities designed to make your stay comfortable and memorable.</p>
-    </div>
-
-    <div id="gallery" class="section">
-      <h2>Gallery</h2>
-      <div class="room">
-        <img src="gallery1.jpg" alt="Gallery 1">
-        <img src="gallery2.jpg" alt="Gallery 2">
-        <img src="gallery3.jpg" alt="Gallery 3">
-      </div>
-      <p>Take a visual tour of our beautiful surroundings and facilities.</p>
-    </div>
-
-    <div id="contact" class="section">
-      <h2>Contact Us</h2>
-      <div class="contact">
-        <p>For reservations and inquiries, contact us at:</p>
-        <p>Email: info@asirihome.com</p>
-        <p>Phone: +1234567890</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="footer">
-    <p>&copy; 2024 Asiri Home Stay. All rights reserved.</p>
-  </div>
-
 </body>
 </html>
