--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Download Website</title>
+    <title>CK Movie HUB</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,6 +22,17 @@
         h1, h2 {
             text-align: center;
             color: #333;
+        }
+        .search-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .search-container input[type="text"] {
+            padding: 10px;
+            width: 60%;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
         }
         .movie-list {
             list-style-type: none;
@@ -73,9 +84,15 @@
 <body>
     <div class="container">
         <h1>Movie Download Website</h1>
-        <p>Welcome to our movie download website. Browse the movies below:</p>
-        
-        <ul class="movie-list">
+
+        <!-- Search Bar -->
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Search movies...">
+            <button onclick="searchMovies()">Search</button>
+        </div>
+
+        <!-- Movie List -->
+        <ul class="movie-list" id="movieList">
             <li>
                 <img src="placeholder_image.jpg" alt="Movie Image">
                 <div class="movie-details">
@@ -88,5 +105,26 @@
             <!-- Add more movies as needed -->
         </ul>
     </div>
+
+    <script>
+        // Example function to search movies (dummy function for illustration)
+        function searchMovies() {
+            var input, filter, ul, li, title, i, txtValue;
+            input = document.getElementById('searchInput');
+            filter = input.value.toUpperCase();
+            ul = document.getElementById('movieList');
+            li = ul.getElementsByTagName('li');
+
+            for (i = 0; i < li.length; i++) {
+                title = li[i].getElementsByClassName('movie-title')[0];
+                txtValue = title.textContent || title.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+        }
+    </script>
 </body>
 </html>
