--- a/index.html
+++ b/index.html
@@ -96,13 +96,18 @@
             <li>
                 <img src="placeholder_image.jpg" alt="Movie Image">
                 <div class="movie-details">
-                    <div class="movie-title">Movie Title</div>
-                    <div class="movie-rating">IMDb Rating: 7.5</div>
-                    <div class="movie-description">Movie Description Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                    <div class="movie-link"><a href="https://t.me/your_telegram_bot_username_or_link?start=movie_id_1">Download Movie</a></div>
+                    <div class="movie-title">Pacific Rim</div>
+                    <div class="movie-rating">IMDb Rating: 7.5/10</div>
+                    <div class="movie-description">As a war between humankind and monstrous sea creatures wages on, a former pilot and a trainee are paired up to drive a seemingly obsolete special weapon in a desperate effort to save the wor</div>
+                    <div class="movie-link"><a href="https://t.me/LKFileShareBot?start=BQADAQAD3AcAAja82UQNApftqmtUrBYE">Download Movie</a></div>
                 </div>
-            </li>
-            <!-- Add more movies as needed -->
+                <img src="placeholder_image.jpg" alt="Movie Image">
+                <div class="movie-details">
+                    <div class="movie-title">Pacific Rim</div>
+                    <div class="movie-rating">IMDb Rating: 7.5/10</div>
+                    <div class="movie-description">As a war between humankind and monstrous sea creatures wages on, a former pilot and a trainee are paired up to drive a seemingly obsolete special weapon in a desperate effort to save the wor</div>
+                    <div class="movie-link"><a href="https://t.me/LKFileShareBot?start=BQADAQAD3AcAAja82UQNApftqmtUrBYE">Download Movie</a></div>
+                </div>
         </ul>
     </div>
 
