--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Movie Download Website</h1>
+            <h1>CK Movie HUB</h1>
             <form action="search.php" method="GET">
                 <input type="text" name="query" placeholder="Search movies...">
                 <button type="submit">Search</button>
@@ -25,7 +25,32 @@
                     <img src="movie_image.jpg" alt="Movie Title">
                     <div class="movie-info">
                         <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
                         <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="movie_image.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="movie_image.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
                         <a href="telegram_bot_link">Download</a>
                     </div>
                 </div>
@@ -36,7 +61,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; All rights reserved by CK Movie HUB.</p>
+            <p>&copy; All rights reserved by CK Movie HUB</p>
         </div>
     </footer>
 </body>
