--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CK Movie HUB</title>
+    <title>Movie Download Website</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file here -->
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>CK Movie HUB</h1>
+            <h1>Movie Download Website</h1>
             <form action="search.php" method="GET">
                 <input type="text" name="query" placeholder="Search movies...">
                 <button type="submit">Search</button>
@@ -32,28 +32,6 @@
                         <a href="telegram_bot_link">Download</a>
                     </div>
                 </div>
-                <div class="movie-card">
-                    <img src="movie_image.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="movie_image.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
                 <!-- Repeat the above movie card structure for each movie -->
             </div>
         </section>
@@ -61,7 +39,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; All rights reserved by CK Movie HUB</p>
+            <p>&copy; 2024 Movie Download Website. All rights reserved.</p>
         </div>
     </footer>
 </body>
