--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <!-- Example movie card -->
                 <div class="movie-card">
-                    <img src="movie_image.jpg" alt="Movie Title">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
                     <div class="movie-info">
                         <h2>Movie Title</h2>
                         <p>Release Date: January 1, 2023</p>
