--- a/index.html
+++ b/index.html
@@ -22,6 +22,61 @@
             <div class="container">
                 <!-- Example movie card -->
                 <div class="movie-card">
+                    <img src="kathuru_mithuru.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
+                    <div class="movie-info">
+                        <h2>Movie Title</h2>
+                        <p>Release Date: January 1, 2023</p>
+                        <p>IMDb Rating: 7.5</p>
+                        <p>Actors: Actor1, Actor2, Actor3</p>
+                        <p>Runtime: 120 minutes</p>
+                        <a href="telegram_bot_link">Download</a>
+                    </div>
+                </div>
+                <div class="movie-card">
                     <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
                     <div class="movie-info">
                         <h2>Movie Title</h2>
