--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Download Website</title>
+    <title>CK Movie HUB</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file here -->
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Movie Download Website</h1>
+            <h1>CK Movie HUB</h1>
             <form action="search.php" method="GET">
                 <input type="text" name="query" placeholder="Search movies...">
                 <button type="submit">Search</button>
@@ -22,13 +22,13 @@
             <div class="container">
                 <!-- Example movie card -->
                 <div class="movie-card">
-                    <img src="kathuru_mithuru.jpg" alt="Movie Title">
+                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
                     <div class="movie-info">
-                        <h2>Movie Title</h2>
+                        <h2>Kathuru Mithuru</h2>
                         <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
+                        <p>IMDb Rating: 7.4</p>
+                        <p>Actors: Mahendra Perera, Jayalath Manoratne, Gihan Fernando, Rodney Warnakula, Priyantha Seneviratne, Kusum Renu</p>
+                        <p>Runtime: 115 minutes</p>
                         <a href="telegram_bot_link">Download</a>
                     </div>
                 </div>
