--- a/index.html
+++ b/index.html
@@ -17,80 +17,34 @@
         </div>
     </header>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CK Movie HUB</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1 class="neon-text">CK Movie HUB</h1>
+        <input type="text" id="search-bar" placeholder="Search for movies...">
+    </header>
+    
     <main>
-        <section id="movies">
-            <div class="container">
-                <!-- Example movie card -->
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Kathuru Mithuru</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.4</p>
-                        <p>Actors: Mahendra Perera, Jayalath Manoratne, Gihan Fernando, Rodney Warnakula, Priyantha Seneviratne, Kusum Renu</p>
-                        <p>Runtime: 115 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <div class="movie-card">
-                    <img src="IMG_20240725_221202_612.jpg" alt="Movie Title">
-                    <div class="movie-info">
-                        <h2>Movie Title</h2>
-                        <p>Release Date: January 1, 2023</p>
-                        <p>IMDb Rating: 7.5</p>
-                        <p>Actors: Actor1, Actor2, Actor3</p>
-                        <p>Runtime: 120 minutes</p>
-                        <a href="telegram_bot_link">Download</a>
-                    </div>
-                </div>
-                <!-- Repeat the above movie card structure for each movie -->
+        <section class="movie-card">
+            <img src="movie-poster.jpg" alt="Movie Poster" class="movie-poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>Release Date:</strong> YYYY-MM-DD</p>
+                <p><strong>IMDb Rating:</strong> 7.8/10</p>
+                <p><strong>Actors:</strong> Actor 1, Actor 2</p>
+                <p><strong>Runtime:</strong> 120 min</p>
+                <a href="https://t.me/your_bot_link" class="download-link">Download</a>
             </div>
         </section>
     </main>
+</body>
 
     <footer>
         <div class="container">
