--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     
     <main>
         <section class="movie-card">
-            <img src="movie-poster.jpg" alt="Movie Poster" class="movie-poster">
+            <img src="IMG_20240725_221202_612.jpg" alt="Movie Poster" class="movie-poster">
             <div class="movie-details">
-                <h2>Movie Title</h2>
-                <p><strong>Release Date:</strong> YYYY-MM-DD</p>
-                <p><strong>IMDb Rating:</strong> 7.8/10</p>
-                <p><strong>Actors:</strong> Actor 1, Actor 2</p>
-                <p><strong>Runtime:</strong> 120 min</p>
+                <h2>Kathuru Mithuru</h2>
+                <p><strong>Release Date:</strong> 2024-04-01</p>
+                <p><strong>IMDb Rating:</strong> 7.4/10</p>
+                <p><strong>Actors:</strong> Mahendra Perera, Jayalath Manoratne, Gihan Fernando, Rodney Warnakula, Priyantha Seneviratne, Kusum Renu</p>
+                <p><strong>Runtime:</strong> 115 min</p>
                 <a href="https://t.me/your_bot_link" class="download-link">Download</a>
             </div>
         </section>
@@ -45,7 +45,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Movie Download Website. All rights reserved.</p>
+            <p>&copy; All rights reserved by CK Movie HUB</p>
         </div>
     </footer>
 </body>
