--- a/index.html
+++ b/index.html
@@ -4,89 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CK Movie HUB</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #FFFFFF;
-        }
-
-        .neon-text {
-            font-size: 4em;
-            color: #FFFFFF;
-            text-align: center;
-            padding: 20px;
-            text-shadow: 0 0 5px #00E5FF, 0 0 10px #00E5FF, 0 0 20px #00E5FF, 0 0 40px #00E5FF, 0 0 80px #00E5FF, 0 0 90px #00E5FF;
-        }
-
-        .search-bar {
-            text-align: center;
-            margin: 20px;
-        }
-
-        .search-bar input[type="text"] {
-            width: 60%;
-            padding: 10px;
-            border: none;
-            border-radius: 25px;
-            font-size: 1em;
-        }
-
-        .movie-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .movie {
-            background-color: #1E1E1E;
-            margin: 15px;
-            padding: 20px;
-            border-radius: 10px;
-            width: 300px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            text-align: center;
-        }
-
-        .movie img {
-            width: 100%;
-            border-radius: 10px;
-        }
-
-        .movie h3 {
-            margin: 10px 0;
-        }
-
-        .movie p {
-            margin: 5px 0;
-        }
-
-        .footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #000000;
-            color: #FFFFFF;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .social-icons {
-            margin: 10px 0;
-        }
-
-        .social-icons a {
-            color: #FFFFFF;
-            margin: 0 10px;
-            text-decoration: none;
-            font-size: 1.5em;
-        }
-
-        .social-icons a:hover {
-            color: #00E5FF;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="neon-text">CK Movie HUB</div>
@@ -102,16 +20,29 @@
             <p>IMDb: 8.5</p>
             <p>Actors: Actor 1, Actor 2, Actor 3</p>
             <p>Run Time: 120 mins</p>
-            <p><a href="https://telegram.me/yourbot?start=movie1">Download via Telegram</a></p>
+            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
+        </div>
+        <div class="movie">
+            <img src="movie1.jpg" alt="Movie 1">
+            <h3>Movie Title 1</h3>
+            <p>Release Date: 2023-01-01</p>
+            <p>IMDb: 8.5</p>
+            <p>Actors: Actor 1, Actor 2, Actor 3</p>
+            <p>Run Time: 120 mins</p>
+            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
+        </div>
+        <div class="movie">
+            <img src="movie1.jpg" alt="Movie 1">
+            <h3>Movie Title 1</h3>
+            <p>Release Date: 2023-01-01</p>
+            <p>IMDb: 8.5</p>
+            <p>Actors: Actor 1, Actor 2, Actor 3</p>
+            <p>Run Time: 120 mins</p>
+            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
         </div>
         <!-- Add more movies as needed -->
     </div>
     <div class="footer">
-        <div class="social-icons">
-            <a href="https://www.facebook.com/yourpage" target="_blank">&#xf09a;</a>
-            <a href="https://www.whatsapp.com/yourlink" target="_blank">&#xf232;</a>
-            <a href="https://telegram.me/yourbot" target="_blank">&#xf2c6;</a>
-        </div>
         &copy; 2024 CK Movie HUB. All rights reserved.
     </div>
 </body>
