--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="movie-list">
         <!-- Movie 1 -->
         <div class="movie">
-            <img src="movie1.jpg" alt="Movie 1">
+            <img src="IMG_20240725_221202_612.jpg" alt="Movie 1">
             <h3>Movie Title 1</h3>
             <p>Release Date: 2023-01-01</p>
             <p>IMDb: 8.5</p>
