--- a/index.html
+++ b/index.html
@@ -3,47 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CK Movie HUB</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Movie Download Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+        header {
+            background-color: #1e1e1e;
+            color: #ffffff;
+            padding: 20px 0;
+            text-align: center;
+            border-bottom: 2px solid #333;
+        }
+        nav {
+            background-color: #1e1e1e;
+            overflow: hidden;
+            border-bottom: 2px solid #333;
+            padding: 0 20px;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: #e0e0e0;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #333;
+            color: #ffffff;
+        }
+        .search-bar {
+            margin: 20px auto;
+            max-width: 600px;
+            text-align: center;
+        }
+        .search-bar input {
+            width: 80%;
+            padding: 10px;
+            border: 2px solid #333;
+            border-radius: 5px;
+            background-color: #1e1e1e;
+            color: #e0e0e0;
+        }
+        .search-bar button {
+            padding: 10px 20px;
+            background-color: #0ff;
+            color: #000;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+            cursor: pointer;
+            margin-left: -4px;
+        }
+        .search-bar button:hover {
+            background-color: #0cc;
+            box-shadow: 0 0 20px #0cc, 0 0 30px #0cc, 0 0 40px #0cc;
+        }
+        .container {
+            padding: 20px;
+        }
+        .movie {
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+        .movie img {
+            max-width: 150px;
+            margin-right: 20px;
+            border-radius: 8px;
+        }
+        .movie-details {
+            max-width: 600px;
+        }
+        .movie-details h2 {
+            margin-top: 0;
+            color: #ffffff;
+        }
+        .movie-details p {
+            line-height: 1.6;
+        }
+        .neon-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #0ff;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+            transition: background-color 0.3s ease;
+        }
+        .neon-button:hover {
+            background-color: #0cc;
+            box-shadow: 0 0 20px #0cc, 0 0 30px #0cc, 0 0 40px #0cc;
+        }
+        footer {
+            background-color: #1e1e1e;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div class="neon-text">CK Movie HUB</div>
+    <header>
+        <h1>Movie Download Website</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Latest Movies</a>
+        <a href="#">Genres</a>
+        <a href="#">Contact</a>
+    </nav>
     <div class="search-bar">
         <input type="text" placeholder="Search for movies...">
+        <button type="button">Search</button>
     </div>
-    <div class="movie-list">
-        <!-- Movie 1 -->
+    <div class="container">
         <div class="movie">
-            <img src="IMG_20240725_221202_612.jpg" alt="Movie 1">
-            <h3>Movie Title 1</h3>
-            <p>Release Date: 2023-01-01</p>
-            <p>IMDb: 8.5</p>
-            <p>Actors: Actor 1, Actor 2, Actor 3</p>
-            <p>Run Time: 120 mins</p>
-            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel risus nec sapien varius bibendum. Integer nec consequat odio.</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
         </div>
-        <div class="movie">
-            <img src="movie1.jpg" alt="Movie 1">
-            <h3>Movie Title 1</h3>
-            <p>Release Date: 2023-01-01</p>
-            <p>IMDb: 8.5</p>
-            <p>Actors: Actor 1, Actor 2, Actor 3</p>
-            <p>Run Time: 120 mins</p>
-            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
-        </div>
-        <div class="movie">
-            <img src="movie1.jpg" alt="Movie 1">
-            <h3>Movie Title 1</h3>
-            <p>Release Date: 2023-01-01</p>
-            <p>IMDb: 8.5</p>
-            <p>Actors: Actor 1, Actor 2, Actor 3</p>
-            <p>Run Time: 120 mins</p>
-            <p><a href="https://telegram.me/yourbot?start=movie1" class="download-link">Download via Telegram</a></p>
-        </div>
-        <!-- Add more movies as needed -->
+        <!-- Repeat the .movie div for more movies -->
     </div>
-    <div class="footer">
-        &copy; 2024 CK Movie HUB. All rights reserved.
-    </div>
+    <footer>
+        <p>&copy; 2024 Movie Download Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
