--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
             <img src="movie-poster.jpg" alt="Movie Poster">
             <div class="movie-details">
                 <h2>Movie Title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel risus nec sapien varius bibendum. Integer nec consequat odio.</p>
+                <p><strong>IMDb:</strong> 8.5/10</p>
+                <p><strong>Release Date:</strong> January 1, 2024</p>
+                <p><strong>Run Time:</strong> 120 minutes</p>
+                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
                 <a href="download-link" class="neon-button" download>Download</a>
             </div>
         </div>
@@ -146,3 +149,4 @@
     </footer>
 </body>
 </html>
+
