--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Download Website</title>
+    <title>CK Movie HUB</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -118,7 +118,7 @@
 </head>
 <body>
     <header>
-        <h1>Movie Download Website</h1>
+        <h1>CK Movie HUB</h1>
     </header>
     <nav>
         <a href="#">Home</a>
@@ -130,6 +130,58 @@
         <input type="text" placeholder="Search for movies...">
         <button type="button">Search</button>
     </div>
+    <div class="container">
+        <div class="movie">
+            <img src="IMG_20240725_221202_612.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Kathuru Mithuru</h2>
+                <p><strong>🔮IMDb:</strong> 7.4/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2023</p>
+                <p><strong>⏰Run Time:</strong> 115 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>IMDb:</strong> 8.5/10</p>
+                <p><strong>Release Date:</strong> January 1, 2024</p>
+                <p><strong>Run Time:</strong> 120 minutes</p>
+                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>IMDb:</strong> 8.5/10</p>
+                <p><strong>Release Date:</strong> January 1, 2024</p>
+                <p><strong>Run Time:</strong> 120 minutes</p>
+                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>IMDb:</strong> 8.5/10</p>
+                <p><strong>Release Date:</strong> January 1, 2024</p>
+                <p><strong>Run Time:</strong> 120 minutes</p>
+                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
     <div class="container">
         <div class="movie">
             <img src="movie-poster.jpg" alt="Movie Poster">
@@ -145,7 +197,7 @@
         <!-- Repeat the .movie div for more movies -->
     </div>
     <footer>
-        <p>&copy; 2024 Movie Download Website. All rights reserved.</p>
+        <p>&copy; CK Movie HUB 2024. All rights reserved.</p>
     </footer>
 </body>
 </html>
