--- a/index.html
+++ b/index.html
@@ -148,10 +148,23 @@
             <img src="movie-poster.jpg" alt="Movie Poster">
             <div class="movie-details">
                 <h2>Movie Title</h2>
-                <p><strong>IMDb:</strong> 8.5/10</p>
-                <p><strong>Release Date:</strong> January 1, 2024</p>
-                <p><strong>Run Time:</strong> 120 minutes</p>
-                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+    </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
                 <a href="download-link" class="neon-button" download>Download</a>
             </div>
         </div>
@@ -161,10 +174,10 @@
             <img src="movie-poster.jpg" alt="Movie Poster">
             <div class="movie-details">
                 <h2>Movie Title</h2>
-                <p><strong>IMDb:</strong> 8.5/10</p>
-                <p><strong>Release Date:</strong> January 1, 2024</p>
-                <p><strong>Run Time:</strong> 120 minutes</p>
-                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
                 <a href="download-link" class="neon-button" download>Download</a>
             </div>
         </div>
@@ -174,10 +187,10 @@
             <img src="movie-poster.jpg" alt="Movie Poster">
             <div class="movie-details">
                 <h2>Movie Title</h2>
-                <p><strong>IMDb:</strong> 8.5/10</p>
-                <p><strong>Release Date:</strong> January 1, 2024</p>
-                <p><strong>Run Time:</strong> 120 minutes</p>
-                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
                 <a href="download-link" class="neon-button" download>Download</a>
             </div>
         </div>
@@ -187,10 +200,114 @@
             <img src="movie-poster.jpg" alt="Movie Poster">
             <div class="movie-details">
                 <h2>Movie Title</h2>
-                <p><strong>IMDb:</strong> 8.5/10</p>
-                <p><strong>Release Date:</strong> January 1, 2024</p>
-                <p><strong>Run Time:</strong> 120 minutes</p>
-                <p><strong>Genres:</strong> Action, Drama, Thriller</p>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
+                <a href="download-link" class="neon-button" download>Download</a>
+            </div>
+        </div>
+        </div>
+    <div class="container">
+        <div class="movie">
+            <img src="movie-poster.jpg" alt="Movie Poster">
+            <div class="movie-details">
+                <h2>Movie Title</h2>
+                <p><strong>🔮IMDb:</strong> 8.5/10</p>
+                <p><strong>📆Release Date:</strong> January 1, 2024</p>
+                <p><strong>⏰Run Time:</strong> 120 minutes</p>
+                <p><strong>🌟Genres:</strong> Action, Drama, Thriller</p>
                 <a href="download-link" class="neon-button" download>Download</a>
             </div>
         </div>
